--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -4,7 +4,7 @@
       {% for list in section.settings.product_list %}
       <div class="col-lg-3">
       	 <div class="card">
-
+<h1>Hello</h1>
                 <div class="text-center">
 
                   {% for image in list.images limit:1%} 
